Phase 1: port MyosinFixed anchor spring (A7.b) to device kernel
Folds the rod-tail anchor force into GPUMoveThing.jointsKernel via new
anchorPts (FloatArray, myoCap*3) + anchoredFlags (IntArray, myoCap)
buffers, packed each step in packJointsRange. Force-only — mirrors the
CPU's commented-out torque lines exactly. Eliminates the last CPU pose
read inside myoJoints1 on the -gpu path (myoRod.end1AsPt3D every step).

DIAG_CPU_ANCHOR (BOA_DIAG_CPU_ANCHOR=1 env var) gates a CPU-vs-device
A/B on the identical build: default OFF runs the device anchor and
skips the CPU reduced pass; ON skips the kernel contribution
(anchoredFlags zeroed pack-side) and re-enables
MyosinFixed.applyGPUDroppedForces via MyosinThreads.execute.

Force-coverage audit clean: anchor applied exactly once in both flag
states. MyosinFixed is the only applyGPUDroppedForces override in the
gliding-assay config; no other dropped force at risk.

Compile clean under Java 21 + TornadoVM 4.0.1-dev. Not yet run — jba
gates with SingleMyoDiag A/B then the 10-seed gliding ensemble vs the
post-fix baseline 856.80/7.30/8.22. See JOURNAL "Phase 1 — anchor
spring ported to device kernel (A7.b)" for full survey + commands.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>